# can-pgn-terminal

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: requirements.txt  server.py
backend/app/: can_listener.py  config.py  main.py  models.py  resources.py  stores.py
backend/tests/: test_api.py  test_can_listener.py  test_models.py  test_stores.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  resources.js
