[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nmea-web-terminal"
version = "1.0.0"
description = "Web-based NMEA 2000 CAN bus monitor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["nmea", "nmea2000", "can-bus", "marine"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]