[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "can-pgn-terminal"
version = "1.0.0"
description = "Web-based CAN bus PGN monitor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["can-bus", "pgn", "marine", "dashboard"]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio",
    "ruff",
    "httpx",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]